Update and rename home.html to index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           There is an invisible number between 0 to 20. In this game you have to
           guess the number
         </p>
-        <a href="index.html" style="text-decoration: none"
+        <a href="home1.html" style="text-decoration: none"
           ><button type="button" class="btn" id="btn">Let's Go</button></a
         >
       </div>
